Make sections centered, but also make sure they don't become no-height elements on Safari by getting rid of height: 100%.

--- a/app.css
+++ b/app.css
@@ -8,7 +8,9 @@ body {
   color: #252528;
   background-color: white;
   margin: 0;
-  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 section {
